--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==1.4.0
 astunparse==1.6.3
+attrs==22.2.0
 autopep8==1.6.0
 bcrypt==3.2.2
 black==22.3.0
@@ -11,6 +12,7 @@ click==8.1.3
 colorama==0.4.5
 dnspython==2.2.1
 email-validator==1.2.1
+exceptiongroup==1.1.0
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
 Flask-CKEditor==0.4.6
@@ -26,6 +28,7 @@ gunicorn==20.1.0
 h5py==3.8.0
 idna==3.3
 importlib-metadata==4.11.4
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 keras==2.11.0
@@ -41,12 +44,14 @@ pandas==1.3.5
 pathspec==0.9.0
 Pillow==9.1.1
 platformdirs==2.5.2
+pluggy==1.0.0
 protobuf==3.19.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pycparser==2.21
 pymongo==4.1.1
+pytest==7.2.1
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-slugify==6.1.2
